...
                                <rect key="frame" x="101.5" y="168.5" width="172.5" height="250"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0gE-Xb-7qI">
                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="30"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3F5-yE-ut5">
                                        <rect key="frame" x="0.0" y="70" width="172.5" height="30"/>
                                        <constraints>
...
                                        <rect key="frame" x="55" y="140" width="62" height="40"/>
                                        <color key="backgroundColor" red="0.9545887113" green="0.35851725940000001" blue="0.41347795720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" label="Login Button"/>
                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="45A-tI-gHX">
                                        <rect key="frame" x="59" y="220" width="54" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="Sign Up Button"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Login" id="o5T-Op-l7E">
                        <barButtonItem key="backBarButtonItem" title="Cancel" id="k1H-ze-cxc"/>
                    </navigationItem>
                    <connections>
...
                                                <rect key="frame" x="113.5" y="0.0" width="221.5" height="31"/>
                                                <segments>
                                                    <segment title="Female"/>
                                                    <segment title="Male"/>
                                                </segments>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter first name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="45Y-L1-96D">
                                                <rect key="frame" x="113.5" y="0.0" width="221.5" height="30"/>
                                                <color key="tintColor" red="0.9545887113" green="0.35851725940000001" blue="0.41347795720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uNO-vQ-iPl">
                                                <rect key="frame" x="113.5" y="0.0" width="221.5" height="30"/>
                                                <color key="tintColor" red="0.9545887113" green="0.35851725940000001" blue="0.41347795720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RLs-CP-AUa">
                                                <rect key="frame" x="113.5" y="0.0" width="221.5" height="30"/>
                                                <color key="tintColor" red="0.9545887113" green="0.35851725940000001" blue="0.41347795720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Sign Up" id="llo-vR-pzJ">
                        <barButtonItem key="rightBarButtonItem" title="Submit" id="Oer-1s-pLY">
                            <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
...
                                        <rect key="frame" x="124" y="378" width="50" height="50"/>
                                        <color key="backgroundColor" red="0.9545887113" green="0.35851725940000001" blue="0.41347795720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" label="Camera Button"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
...
                        <viewLayoutGuide key="safeArea" id="epk-VX-ec2"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Camera" image="camera" selectedImage="camera" id="xj3-Fd-kSb">
                        <color key="badgeColor" red="0.9545887113" green="0.35851725940000001" blue="0.41347795720000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBarItem>
...
        <scene sceneID="IKt-Gt-eol">
            <objects>
                <viewController title="Search" id="7m0-eh-3Lh" customClass="SearchViewController" customModule="SecondRung" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="IsV-HB-8kx">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
