//
//  SpecialWords.swift
//  SecondRung
//
//  Created by Emma O'Keeffe on 25/03/2019.
//  Copyright © 2019 O'Keeffe, Emma. All rights reserved.
//

import Foundation

var specialWords = [
    "Strawberries": "Strawberry",
    "Tomatoes": "Tomato",
    "Kiwi Fruit": "Kiwi",
    "Carrots": "Carrot",
    "Black Cherries": "Cherry",
    "Pepper": "Bell Pepper",
    "Apricots": "Apricot"
]
