...
        guard
            let emailtext = email.text,
            let passwordtext = password.text,
            emailtext.count > 0,
            passwordtext.count > 0
            else {
                presentAlert(title: "Invalid Credentials 😭", message: "Invalid Username or Password")
                return
        }
        
        Auth.auth().signIn(withEmail: emailtext, password: passwordtext) { user, error in
            if let error = error, user == nil {
                self.presentAlert(title: "Sign In Failed 😭", message: error.localizedDescription)
...
